--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../src/index.js"></script>
+    <div id="content"></div>
+    <script src="../src/index.jsx"></script>
   </body>
 </html>
