Correct the state management, add Weather icon and add dist for Gh-pages

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link rel="stylesheet" href="../src/assets/styles/normalize.css" />
   </head>
   <body>
     <div id="app"></div>
-    <div id="content"></div>
     <script src="../src/index.jsx"></script>
   </body>
 </html>
